tests/negative/runtime/stack_overflow.stream
// EXPECT: Runtime Error
function forever(n: Int) -> Int {
    return forever(n + 1);
}
forever(1);